# starcode

./: .gitignore  .gitmodules  CMakeLists.txt
client/: pack-atlas.js  package.json  tsconfig.json  webpack.config.js
client/assets/: tiles.json
client/src/: app.tsx  creature.ts  entity.ts  gamestate.ts  gameview.tsx  index.tsx  keyboard.ts  loadstate.ts  resources.ts  test.ts  utils.ts  world.ts
client/src/css/: style.css
extras/websocket/: websocket.hpp
src/: CMakeLists.txt  defs.hpp  fraction.cpp  fraction.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  id.hpp  main.cpp  player.cpp  player.hpp  resource_type.cpp  resource_type.hpp  subscription.hpp  universe.cpp  universe.hpp
src/objects/: asteroid.cpp  asteroid.hpp  astroid.cpp  astroid.hpp  spaceship.cpp  spaceship.hpp
src/objects/component/: filesystem.cpp  filesystem.hpp
src/scripting/: binding.hpp  processor.cpp  processor.hpp
src/server/: server.cpp  server.hpp
tests/: CMakeLists.txt
tests/unit/: binding_test.cpp  filesystem_test.cpp  processor_test.cpp
